# $Id$

2008-05-27	Konstantin V. Arkhipov

	* core/Cache/: getList() and append() were backported from trunk for
	all CachePeer's.

	* main/DAOs/Workers/CommonDaoWorker.class.php,
	main/DAOs/Workers/TransparentDaoWorker.class.php: getListByIds() now
	uses CachePeer's multi-get ability - getList(); backported from trunk.

2008-05-02	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-13	Konstantin V. Arkhipov

	* global.inc.php.tpl: class cache now detects classes with errors
	during compile time.

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-07	Konstantin V. Arkhipov

	* main/UnifiedContainer/UnifiedContainer.class.php: worker's
	serialization prevention implemented.

2008-04-03	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: lazy fetching strategy
	support for SpookedClass properties.

2008-03-31	Konstantin V. Arkhipov

	* core/Base/Time.class.php: several fixes for parsing issues were
	backported from trunk.

	* global.inc.php.tpl: added cache invalidation upon failed include
	from cached location; solves class moving case.

2008-03-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php: now rotates
	queue upon overflow, it's the same strategy as in
	SharedMemorySegmentHandler.

2008-03-27	Konstantin V. Arkhipov

	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.

2008-03-24	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: custom
	clean() implemented.

2008-03-07	Denis M. Gabaidulin

	* main/UnifiedContainer/UnifiedContainer.class.php: dropList()
	implemented.

2008-03-04	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php: PostgreSQL-8.3 doesn't like
	comparsion between integer and varchar, so dialect now quotes all
	integers by default; again.

2008-03-04	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotEmptyArray().
